--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@
 title: Kaleb Robert McKone
 email: kmckone1825@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  My name is Kaleb McKone and I am a student in Computer Science and Mathematics
+  My name is Kaleb McKone. I am studied Computer Science and Mathematics
   at the Univeristy of Iowa. This site is a blog and content hub for stuff that I'm
   interested in and want to discuss. I hope that you enjoy your time here and get 
   the most out of what I write about.
-baseurl: "/personal-site" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://kalebmckone.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: krmckone
 github_username:  krmckone
