Remove workflow. Add github pages.

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username:  krmckone
 
 # Build settings
 markdown: kramdown
-theme: jekyll-athena
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
