--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username:  krmckone
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
