--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Kaleb Robert McKone
 email: kmckone1825@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Kaleb McKone
+  Website used to maintain my personal notes.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://kalebmckone.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: krmckone
